apps/home-assistant/deployment.patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  template:
    spec:
      volumes:
        - name: matter-data
          persistentVolumeClaim:
            claimName: matter-data
      containers:
        - name: app
          image: ghcr.io/home-assistant/home-assistant:2026.2.3@sha256:96fa92d83fa8dae987fbbbcf58b1fea1140985ff6a8517b37f7b65c76ef20133
          command: [python, -m, homeassistant, --config, /config]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 2G
          volumeMounts:
            - name: volume
              mountPath: /config
          ports:
            - name: http
              containerPort: 8123
        - name: matter
          image: ghcr.io/matter-js/python-matter-server:stable@sha256:6827e352011e2d8c2bde771e446fcf72acc49150ef66bad978816bac1762aad3
          volumeMounts:
            - name: matter-data
              mountPath: /data
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto@sha256:a908c65cc8e67ec9d292ef27c2c0360dbaaee7eb1b935cdd194e67697f15dea1
          ports:
            - name: mqtt
              containerPort: 1883
