apps/home-assistant/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.7.4@sha256:5a531753cea96444200158fc2b0ac7ccd739291ec50414877b396de6e0bb29b3
          command: [python, -m, homeassistant, --config, /config]
          volumeMounts:
            - name: volume
              mountPath: /config
          resources:
            requests:
              memory: 100M
            limits:
              memory: 2G
          ports:
            - name: http
              containerPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: mqtt
      port: 1883
      targetPort: mqtt

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps,tag:home
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [home-assistant]
