apps/home-assistant/home-assistant.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: matter-data
          persistentVolumeClaim:
            claimName: matter-data
        - name: config
          configMap:
            name: config
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.2.3@sha256:96fa92d83fa8dae987fbbbcf58b1fea1140985ff6a8517b37f7b65c76ef20133
          command: [python, -m, homeassistant, --config, /config]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 2G
          volumeMounts:
            - name: volume
              mountPath: /config
          ports:
            - name: http
              containerPort: 8123
        - name: matter
          image: ghcr.io/matter-js/python-matter-server:stable@sha256:6827e352011e2d8c2bde771e446fcf72acc49150ef66bad978816bac1762aad3
          volumeMounts:
            - name: matter-data
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    internal-dns.alpha.kubernetes.io/target: internal.beaver-cloud.xyz
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host home-assistant.beaver-cloud.xyz]
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: app-service
                port:
                  name: http
